(Ohne Ticket): kleine Anpassungen vor dem Deployment

--- a/winexhibition-questionnaire/WineExhibitionQuestionnaire/Views/Questionnaire/Success.cshtml
+++ b/winexhibition-questionnaire/WineExhibitionQuestionnaire/Views/Questionnaire/Success.cshtml
@@ -3,18 +3,7 @@
 <script src="@Url.Content("~/Scripts/jquery-1.10.2.js")" type="text/javascript"></script>
 
 <h2>@Resources.LocRes.Success_Header</h2>
-<h5>@Resources.LocRes.Success_Text</h5>
-<br />
-<div class="form-group row" style="margin-left: 0px">
-    <p>
-        @Model.COMPANY_NAME <br />
-        @Model.FIRST_NAME @Model.LAST_NAME <br />
-        @Model.EMAIL <br />
-        @String.Format(Resources.LocRes.Success_Participate, Model.PARTICIPATE == 2 ? Resources.LocRes.Not : "") <br />
-        @(Model.PARTICIPATE != 2 ? String.Format(Resources.LocRes.Success_Size, Model.PARTICIPATE == 1 ? Model.STAND_SIZE + " m²" : Resources.LocRes.Success_Similar) : "")
-    </p>
-</div>
-
+<h5><a href="https://www.weinmesseberlin.de/">https://www.weinmesseberlin.de</a></h5>
 <script>
     $("#language").on("change", function () {
         var lang = $(this).val();
