--- a/winexhibition-questionnaire/WineExhibitionQuestionnaire/Views/Questionnaire/Index.cshtml
+++ b/winexhibition-questionnaire/WineExhibitionQuestionnaire/Views/Questionnaire/Index.cshtml
@@ -50,7 +50,11 @@
             </p>
         </div>
     </div>
-
+    <div class="form-group row padding-top-20">
+        <div class="col-sm-12">
+            <b>@Html.Raw(Resources.LocRes.Index_Attention)</b>
+        </div>
+    </div>
     <div class="form-group row padding-top-20">
         <div class="col-sm-3">
             <button type="submit" class="btn btn-primary" style="width: 100%;">@Resources.LocRes.Index_Submit</button>
