--- a/winexhibition-questionnaire/WineExhibitionQuestionnaire/Views/Shared/_AccountLayout.cshtml
+++ b/winexhibition-questionnaire/WineExhibitionQuestionnaire/Views/Shared/_AccountLayout.cshtml
@@ -25,9 +25,8 @@
 </div>
 <div class="container body-content">
     @RenderBody()
-    <hr />
 </div>
-<div class="site-footer footer">
+<div class="site-footer foooter">
     <div class="container no-print">
         <footer>
             <p>
