--- a/winexhibition-questionnaire/WineExhibitionQuestionnaire/Views/Shared/_Layout.cshtml
+++ b/winexhibition-questionnaire/WineExhibitionQuestionnaire/Views/Shared/_Layout.cshtml
@@ -42,9 +42,9 @@
 </div>
 <div class="container body-content">
     @RenderBody()
-    <hr />
 </div>
-<div class="site-footer footer">
+
+<div class="site-footer foooter">
     <div class="container no-print">
         <footer>
             <p>
