--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/activity_winedetails.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/activity_winedetails.xml
@@ -537,6 +537,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:padding="10dp"
                 android:orientation="vertical">
 
                 <TextView
@@ -544,7 +545,7 @@
                     android:text="@string/descriptionHeader"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="15px"
+                    android:padding="10dp"
                     android:textStyle="bold"
                     android:clickable="true"
                     android:focusable="true"
@@ -557,7 +558,7 @@
                     android:text="@string/loremipsum"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="15px"
+                    android:padding="10dp"
                     android:visibility="visible"
                     android:background="@drawable/back"
                     android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
@@ -567,7 +568,7 @@
                     android:text="@string/producerHeader"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="15px"
+                    android:padding="10dp"
                     android:textStyle="bold"
                     android:background="@drawable/back"
                     android:textAppearance="?android:attr/textAppearanceMedium"
@@ -578,7 +579,7 @@
                     android:text="@string/loremipsum"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="15px"
+                    android:padding="10dp"
                     android:visibility="gone"
                     android:background="@drawable/back"
                     android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
@@ -588,7 +589,7 @@
                     android:text="@string/wineRegionHeader"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="15px"
+                    android:padding="10dp"
                     android:textStyle="bold"
                     android:clickable="true"
                     android:focusable="true"
@@ -601,7 +602,7 @@
                     android:text="@string/loremipsum"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="15px"
+                    android:padding="10dp"
                     android:visibility="gone"
                     android:background="@drawable/back"
                     android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
@@ -611,7 +612,7 @@
                     android:text="@string/grapeInformationHeader"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="15px"
+                    android:padding="10dp"
                     android:textStyle="bold"
                     android:clickable="true"
                     android:focusable="true"
@@ -624,7 +625,7 @@
                     android:text="@string/loremipsum"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="15px"
+                    android:padding="10dp"
                     android:visibility="gone"
                     android:background="@drawable/back"
                     android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
@@ -634,7 +635,7 @@
                     android:text="@string/availabilityHeader"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="15px"
+                    android:padding="10dp"
                     android:textStyle="bold"
                     android:clickable="true"
                     android:focusable="true"
@@ -647,12 +648,23 @@
                     android:text="@string/loremipsum"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="15px"
+                    android:padding="10dp"
                     android:visibility="gone"
                     android:background="@drawable/back"
                     android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
             </LinearLayout>
+
+            <Button
+                android:id="@+id/btnShare"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/buttonPrimary"
+                android:padding="20dp"
+                android:layout_margin="20dp"
+                android:layout_gravity="center"
+                android:text="@string/share_button"
+                android:textColor="@color/buttonTextPrimary" />
 
         </LinearLayout>
 
