--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/values/styles.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/values/styles.xml
@@ -1,13 +1,22 @@
 <resources>
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.DayNight">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     </style>
+
     <style name="ToolbarColoredBackArrow" parent="AppTheme">
         <item name="android:textColorSecondary">#ffffff</item>
     </style>
 
+    <style name="LightTheme" parent="AppTheme">
+        <item name="textColor">@color/textPrimary</item>
+        <item name="bgColor">@color/colorPrimary</item>
+        <item name="toolbarColor">@color/toolbarPrimary</item>
+    </style>
 
+    <style name="DarkTheme" parent="AppTheme">
+        <item name="textColor">@color/textPrimaryDark</item>
+        <item name="bgColor">@color/colorPrimaryDark</item>
+        <item name="toolbarColor">@color/toolbarPrimaryDark</item>
+    </style>
 </resources>
