--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/toolbar_default.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/toolbar_default.xml
@@ -8,7 +8,7 @@
     android:minHeight="?attr/actionBarSize"
     android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
     android:elevation="4dp"
-    android:backgroundTint="@color/toolbarPrimary"
+    android:backgroundTint="?attr/toolbarColor"
     app:theme="@style/ToolbarColoredBackArrow"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
 
