--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/activity_settings.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/activity_settings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:backgroundTint="@color/colorPrimary"
+    android:background="?attr/bgColor"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -51,7 +51,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/settings_darkmode"
                     android:paddingLeft="10dp"
-                    android:textColor="@color/textPrimary"
+                    android:textColor="?attr/textColor"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:layout_weight="4"/>
 
@@ -59,6 +59,7 @@
                     android:id="@+id/darkmode_checkbox"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:textColor="?attr/textColor"
                     android:layout_gravity="end"
                     android:layout_weight="1"/>
 
@@ -76,7 +77,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/settings_toolbar"
-                    android:textColor="@color/textPrimary"
+                    android:textColor="?attr/textColor"
                     android:paddingLeft="10dp"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:layout_weight="4"/>
@@ -86,6 +87,7 @@
                     android:id="@+id/toolbar_checkbox"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:textColor="?attr/textColor"
                     android:layout_gravity="end"
                     android:layout_weight="1"/>
 
@@ -103,7 +105,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/settings_medal"
-                    android:textColor="@color/textPrimary"
+                    android:textColor="?attr/textColor"
                     android:paddingLeft="10dp"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:layout_weight="4"/>
@@ -112,6 +114,7 @@
                     android:id="@+id/medal_checkbox"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:textColor="?attr/textColor"
                     android:layout_gravity="end"
                     android:layout_weight="1"/>
 
