--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/activity_winedetails.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/activity_winedetails.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:backgroundTint="@color/colorPrimary"
+    android:background="?attr/bgColor"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -85,6 +85,7 @@
                     android:layout_height="wrap_content"
                     android:paddingLeft="10dp"
                     android:text="@string/result"
+                    android:textColor="?attr/textColor"
                     android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
                 <LinearLayout
@@ -100,6 +101,7 @@
                         android:layout_weight="2"
                         android:paddingLeft="10dp"
                         android:text="@string/trophy"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
                     <TextView
@@ -109,6 +111,7 @@
                         android:layout_weight="3"
                         android:textAlignment="textStart"
                         android:textStyle="bold"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
                 </LinearLayout>
 
@@ -125,6 +128,7 @@
                         android:layout_weight="2"
                         android:paddingLeft="10dp"
                         android:text="@string/medal"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
                     <TextView
@@ -134,6 +138,7 @@
                         android:layout_weight="3"
                         android:textAlignment="textStart"
                         android:textStyle="bold"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
                 </LinearLayout>
 
@@ -144,6 +149,7 @@
                     android:paddingLeft="10dp"
                     android:layout_marginTop="20dp"
                     android:text="@string/informations"
+                    android:textColor="?attr/textColor"
                     android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
                 <LinearLayout
@@ -159,6 +165,7 @@
                         android:layout_weight="2"
                         android:paddingLeft="10dp"
                         android:text="@string/year"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
                     <TextView
@@ -168,6 +175,7 @@
                         android:layout_weight="3"
                         android:textAlignment="textStart"
                         android:textStyle="bold"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
                 </LinearLayout>
 
@@ -184,6 +192,7 @@
                         android:layout_weight="2"
                         android:paddingLeft="10dp"
                         android:text="@string/producer"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
                     <TextView
@@ -193,6 +202,7 @@
                         android:layout_weight="3"
                         android:textAlignment="textStart"
                         android:textStyle="bold"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
                 </LinearLayout>
 
@@ -203,6 +213,7 @@
                     android:paddingLeft="10dp"
                     android:layout_marginTop="20dp"
                     android:text="@string/origin"
+                    android:textColor="?attr/textColor"
                     android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
                 <LinearLayout
@@ -218,6 +229,7 @@
                         android:layout_weight="2"
                         android:paddingLeft="10dp"
                         android:text="@string/country"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
                     <TextView
@@ -227,6 +239,7 @@
                         android:layout_weight="3"
                         android:textAlignment="textStart"
                         android:textStyle="bold"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
                 </LinearLayout>
 
@@ -243,6 +256,7 @@
                         android:layout_weight="2"
                         android:paddingLeft="10dp"
                         android:text="@string/region"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
                     <TextView
@@ -252,6 +266,7 @@
                         android:layout_weight="3"
                         android:textAlignment="textStart"
                         android:textStyle="bold"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
                 </LinearLayout>
 
@@ -262,6 +277,7 @@
                     android:paddingLeft="10dp"
                     android:layout_marginTop="20dp"
                     android:text="@string/description"
+                    android:textColor="?attr/textColor"
                     android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
                 <LinearLayout
@@ -277,6 +293,7 @@
                         android:layout_weight="2"
                         android:paddingLeft="10dp"
                         android:text="@string/wine_category"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
                     <TextView
@@ -286,6 +303,7 @@
                         android:layout_weight="3"
                         android:textAlignment="textStart"
                         android:textStyle="bold"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
                 </LinearLayout>
 
@@ -302,6 +320,7 @@
                         android:layout_weight="2"
                         android:paddingLeft="10dp"
                         android:text="@string/flavour"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
                     <TextView
@@ -311,6 +330,7 @@
                         android:layout_weight="3"
                         android:textAlignment="textStart"
                         android:textStyle="bold"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
                 </LinearLayout>
 
@@ -327,6 +347,7 @@
                         android:layout_weight="2"
                         android:paddingLeft="10dp"
                         android:text="@string/vinification"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
                     <TextView
@@ -336,6 +357,7 @@
                         android:layout_weight="3"
                         android:textAlignment="textStart"
                         android:textStyle="bold"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
                 </LinearLayout>
 
@@ -352,6 +374,7 @@
                         android:layout_weight="2"
                         android:paddingLeft="10dp"
                         android:text="@string/type"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
                     <TextView
@@ -361,6 +384,7 @@
                         android:layout_weight="3"
                         android:textAlignment="textStart"
                         android:textStyle="bold"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
                 </LinearLayout>
 
@@ -377,6 +401,7 @@
                         android:layout_weight="2"
                         android:paddingLeft="10dp"
                         android:text="@string/varietal"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
                     <TextView
@@ -386,6 +411,7 @@
                         android:layout_weight="3"
                         android:textAlignment="textStart"
                         android:textStyle="bold"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
                 </LinearLayout>
 
@@ -396,6 +422,7 @@
                     android:paddingLeft="10dp"
                     android:layout_marginTop="20dp"
                     android:text="@string/properties"
+                    android:textColor="?attr/textColor"
                     android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
                 <LinearLayout
@@ -411,6 +438,7 @@
                         android:layout_weight="2"
                         android:paddingLeft="10dp"
                         android:text="@string/alcohol"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
                     <TextView
@@ -420,6 +448,7 @@
                         android:layout_weight="3"
                         android:textAlignment="textStart"
                         android:textStyle="bold"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
                 </LinearLayout>
 
@@ -436,6 +465,7 @@
                         android:layout_weight="2"
                         android:paddingLeft="10dp"
                         android:text="@string/acidity"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
                     <TextView
@@ -445,6 +475,7 @@
                         android:layout_weight="3"
                         android:textAlignment="textStart"
                         android:textStyle="bold"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
                 </LinearLayout>
 
@@ -461,6 +492,7 @@
                         android:layout_weight="2"
                         android:paddingLeft="10dp"
                         android:text="@string/sugar"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
                     <TextView
@@ -470,6 +502,7 @@
                         android:layout_weight="3"
                         android:textAlignment="textStart"
                         android:textStyle="bold"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
                 </LinearLayout>
 
@@ -486,6 +519,7 @@
                         android:layout_weight="2"
                         android:paddingLeft="10dp"
                         android:text="@string/sulfur"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
                     <TextView
@@ -495,6 +529,7 @@
                         android:layout_weight="3"
                         android:textAlignment="textStart"
                         android:textStyle="bold"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
                 </LinearLayout>
 
@@ -511,6 +546,7 @@
                         android:layout_weight="2"
                         android:paddingLeft="10dp"
                         android:text="@string/organic"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
                     <TextView
@@ -520,6 +556,7 @@
                         android:layout_weight="3"
                         android:textAlignment="textStart"
                         android:textStyle="bold"
+                        android:textColor="?attr/textColor"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
                 </LinearLayout>
 
@@ -561,6 +598,7 @@
                     android:padding="10dp"
                     android:visibility="visible"
                     android:background="@drawable/back"
+                    android:textColor="?attr/textColor"
                     android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
                 <TextView
@@ -572,7 +610,7 @@
                     android:textStyle="bold"
                     android:background="@drawable/back"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textColor="@color/textPrimary"/>
+                    android:textColor="?attr/textColor"/>
 
                 <TextView
                     android:id="@+id/producerText"
@@ -582,6 +620,7 @@
                     android:padding="10dp"
                     android:visibility="gone"
                     android:background="@drawable/back"
+                    android:textColor="?attr/textColor"
                     android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
                 <TextView
@@ -595,7 +634,7 @@
                     android:focusable="true"
                     android:background="@drawable/back"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textColor="@color/textPrimary"/>
+                    android:textColor="?attr/textColor"/>
 
                 <TextView
                     android:id="@+id/wineRegionText"
@@ -605,6 +644,7 @@
                     android:padding="10dp"
                     android:visibility="gone"
                     android:background="@drawable/back"
+                    android:textColor="?attr/textColor"
                     android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
                 <TextView
@@ -618,7 +658,7 @@
                     android:focusable="true"
                     android:background="@drawable/back"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textColor="@color/textPrimary"/>
+                    android:textColor="?attr/textColor"/>
 
                 <TextView
                     android:id="@+id/grapeInformationText"
@@ -628,6 +668,7 @@
                     android:padding="10dp"
                     android:visibility="gone"
                     android:background="@drawable/back"
+                    android:textColor="?attr/textColor"
                     android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
                 <TextView
@@ -641,7 +682,7 @@
                     android:focusable="true"
                     android:background="@drawable/back"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textColor="@color/textPrimary"/>
+                    android:textColor="?attr/textColor"/>
 
                 <TextView
                     android:id="@+id/availabilityText"
@@ -651,6 +692,7 @@
                     android:padding="10dp"
                     android:visibility="gone"
                     android:background="@drawable/back"
+                    android:textColor="?attr/textColor"
                     android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
             </LinearLayout>
