--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/drawer_list_header.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/drawer_list_header.xml
@@ -4,6 +4,7 @@
     android:background="?android:attr/activatedBackgroundIndicator"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"
     android:paddingLeft="40dp"
+    android:backgroundTint="?attr/bgColor"
     android:paddingTop="13dp">
 
     <TextView
@@ -11,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:textColor="?attr/textColor"
         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
 
 </LinearLayout>
