--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/wine_list_item.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/wine_list_item.xml
@@ -2,7 +2,7 @@
 android:id="@+id/wineItemLayout"
 android:layout_height="wrap_content"
 android:layout_width="match_parent"
-android:background="?android:attr/activatedBackgroundIndicator"
+android:background="?attr/bgColor"
 android:minHeight="?android:attr/listPreferredItemHeightSmall"
 android:clickable="true"
 android:padding ="10dp">
@@ -40,6 +40,7 @@ android:padding ="10dp">
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
+                android:textColor="?attr/textColor"
                 android:textAppearance="?android:attr/textAppearanceListItemSmall" />
 
             <TextView
@@ -47,6 +48,7 @@ android:padding ="10dp">
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
+                android:textColor="?attr/textColor"
                 android:textAppearance="?android:attr/textAppearanceListItemSmall" />
 
             <TextView
@@ -54,6 +56,7 @@ android:padding ="10dp">
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
+                android:textColor="?attr/textColor"
                 android:textAppearance="?android:attr/textAppearanceListItemSmall" />
 
             <TextView
@@ -61,6 +64,7 @@ android:padding ="10dp">
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
+                android:textColor="?attr/textColor"
                 android:textAppearance="?android:attr/textAppearanceListItemSmall" />
         </LinearLayout>
 
