--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/values/attrs.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/values/attrs.xml
@@ -4,4 +4,5 @@
     <attr name="bgColor2" format="color"/>
     <attr name="textColor" format="color"/>
     <attr name="toolbarColor" format="color"/>
+    <attr name="dividerColor" format="color"/>
 </resources>
