--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/values/styles.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/values/styles.xml
@@ -13,6 +13,7 @@
         <item name="bgColor">@color/colorPrimary</item>
         <item name="bgColor2">@color/colorSecondary</item>
         <item name="toolbarColor">@color/toolbarPrimary</item>
+        <item name="dividerColor">@color/colorSecondaryDark</item>
     </style>
 
     <style name="DarkTheme" parent="AppTheme">
@@ -20,6 +21,7 @@
         <item name="bgColor">@color/colorPrimaryDark</item>
         <item name="bgColor2">@color/colorSecondaryDark</item>
         <item name="toolbarColor">@color/toolbarPrimaryDark</item>
+        <item name="dividerColor">@color/colorSecondary</item>
         <item name="android:textColorHint">@color/colorSecondary</item>
         <item name="android:buttonTint">@color/textPrimaryDark</item>
     </style>
