--- a/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/activity_winedetails.xml
+++ b/Weinsuchapp_Extern/WineSearchApp_Extern/app/src/main/res/layout/activity_winedetails.xml
@@ -183,6 +183,8 @@
                     android:id="@+id/layoutProducer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:clickable="true"
+                    android:focusable="true"
                     android:orientation="horizontal">
 
                     <TextView
