--- a/DWM-App/app/src/main/res/layout/activity_search.xml
+++ b/DWM-App/app/src/main/res/layout/activity_search.xml
@@ -51,25 +51,34 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
+                <Spinner
+                    android:id="@+id/spinnerSearch"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="?attr/textColor"
+                    android:textAlignment="center"
+                    android:layout_weight="1" />
+
                 <EditText
                     android:id="@+id/txtStorageNumber"
-                    android:layout_width="200dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:hint="@string/placeholder_search"
                     android:imeOptions="actionDone"
                     android:inputType="text"
                     android:text=""
+                    android:layout_weight="1.5"
                     app:backgroundTint="?attr/textColor"
                     android:textColor="?attr/textColor"
                     android:textAlignment="center" />
 
                 <Button
                     android:id="@+id/btnSearch"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/buttonPrimary"
                     android:text="@string/search_button"
+                    android:layout_weight="1"
                     android:textColor="@color/buttonTextPrimary" />
 
             </LinearLayout>
