DWM-App: Packages refactored; Expandable Icon für Facets an Dark-Mode angepasst und generell auf der rechten Seite positioniert

--- a/DWM-App/app/src/main/res/layout/activity_search.xml
+++ b/DWM-App/app/src/main/res/layout/activity_search.xml
@@ -173,7 +173,8 @@
             android:background="?attr/bgColor"
             android:dividerHeight="1dp"
             android:divider="?attr/dividerColor"
-            android:childDivider="?attr/dividerColor"/>
+            android:childDivider="?attr/dividerColor"
+            android:groupIndicator="@null"/>
 
     </LinearLayout>
 
