--- a/DWM-App/app/src/main/res/layout/drawer_list_header.xml
+++ b/DWM-App/app/src/main/res/layout/drawer_list_header.xml
@@ -3,16 +3,29 @@
     android:layout_width="match_parent"
     android:background="?android:attr/activatedBackgroundIndicator"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"
-    android:paddingLeft="40dp"
     android:backgroundTint="?attr/bgColor"
+    android:paddingStart="10dp"
+    android:paddingEnd="10dp"
     android:paddingTop="13dp">
 
     <TextView
         android:id="@+id/navDrawerTextViewName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:textColor="?attr/textColor"
         android:textAppearance="?android:attr/textAppearanceListItemSmall"/>
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
+    <ImageView
+        android:id="@+id/navDrawerGroupIndicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/custom_expandable"
+        android:layout_gravity="end"
+        android:adjustViewBounds="true"/>
 
 </LinearLayout>
