--- a/DWM-App/app/src/main/res/layout/activity_search.xml
+++ b/DWM-App/app/src/main/res/layout/activity_search.xml
@@ -155,7 +155,9 @@
                 android:textColor="@color/buttonTextPrimary"
                 android:layout_gravity="center"
                 android:visibility="gone"
-                android:padding="15dp"/>
+                android:padding="15dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"/>
 
             <View android:layout_width="fill_parent"
                 android:layout_height="1dp"
